[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/hud/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Main.gd" type="Script" id=4]
[ext_resource path="res://scenes/wall/Wall.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/net.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 240 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 240 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 360, 10 )

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="Net" type="Sprite" parent="."]
texture = ExtResource( 6 )
offset = Vector2( 360, 240 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 360, 240 )

[node name="PlayerLeft" parent="." instance=ExtResource( 1 )]
position = Vector2( 45, 240 )
normal = Vector2( 1, 0 )
wallType = 4

[node name="PlayerRight" parent="." instance=ExtResource( 1 )]
position = Vector2( 675, 240 )
normal = Vector2( -1, 0 )
wallType = 4
playerType = 1

[node name="WallLeft" parent="." instance=ExtResource( 5 )]
position = Vector2( -10, 240 )
normal = Vector2( 1, 0 )

[node name="CollisionShape2D" parent="WallLeft" index="0"]
shape = SubResource( 1 )

[node name="WallRight" parent="." instance=ExtResource( 5 )]
position = Vector2( 730, 240 )
normal = Vector2( -1, 0 )
wallType = 1

[node name="CollisionShape2D" parent="WallRight" index="0"]
shape = SubResource( 2 )

[node name="WallTop" parent="." instance=ExtResource( 5 )]
position = Vector2( 360, -10 )
normal = Vector2( 0, 1 )
wallType = 2

[node name="WallBottom" parent="." instance=ExtResource( 5 )]
position = Vector2( 360, 490 )
normal = Vector2( 0, -1 )
wallType = 3

[node name="CollisionShape2D" parent="WallBottom" index="0"]
shape = SubResource( 3 )
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="score_point" from="WallLeft" to="." method="_on_WallLeft_score_point"]
[connection signal="score_point" from="WallRight" to="." method="_on_WallRight_score_point"]

[editable path="WallLeft"]

[editable path="WallRight"]

[editable path="WallTop"]

[editable path="WallBottom"]
